<package>
  <name>webint_msgs</name>
  <version>0.1.0</version>
  <description>

     Simple web interface using rosbridge server and websocket
     to show expressiongraph structure and SoT tasks, for review year 2.

  </description>
  <author>Enea Scioni</author>
  <maintainer email="Aertbelien@tobefilled.fr">Erwin Aertbelien</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/webint_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


